--- a/index.html
+++ b/index.html
@@ -13,49 +13,49 @@
             <a-animation attribute="rotation" begin="click" dur="2000" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "2000" to ="0 0 0"></a-animation>
         </a-box>
-        <a-box  color="tomato" depth="4" height="4" width="4" position = "-4 8 -15">
+        <a-box id = "two" color="tomato" depth="4" height="4" width="4" position = "-4 8 -15">
             <a-animation attribute="rotation" begin="click" dur="2000" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "2000" to ="0 0 0"></a-animation>
         </a-box>
-        <a-box  color="tomato" depth="4" height="4" width="4" position = "4 8 -15">
+        <a-box id = "three" color="tomato" depth="4" height="4" width="4" position = "4 8 -15">
             <a-animation attribute="rotation" begin="click" dur="2000" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "2000" to ="0 0 0"></a-animation>
         </a-box>
-        <a-box  color="tomato" depth="4" height="4" width="4" position = "12 8 -15">
+        <a-box id = "four" color="tomato" depth="4" height="4" width="4" position = "12 8 -15">
             <a-animation attribute="rotation" begin="click" dur="2000" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "2000" to ="0 0 0"></a-animation>
         </a-box>
         
-        <a-box  color="tomato" depth="4" height="4" width="4" position = "-12 0 -15">
+        <a-box id = "five" color="tomato" depth="4" height="4" width="4" position = "-12 0 -15">
             <a-animation attribute="rotation" begin="click" dur="2000" to="0 360 0"></a-animation>
            <a-animation attribute ="rotation" begin = "return" dur = "2000" to ="0 0 0"></a-animation> 
         </a-box>
-        <a-box  color="tomato" depth="4" height="4" width="4" position = "-4 0 -15">
+        <a-box id = "six" color="tomato" depth="4" height="4" width="4" position = "-4 0 -15">
             <a-animation attribute="rotation" begin="click" dur="2000" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "2000" to ="0 0 0"></a-animation>
         </a-box>
-        <a-box  color="tomato" depth="4" height="4" width="4" position = "4 0 -15">
+        <a-box id = "seven" color="tomato" depth="4" height="4" width="4" position = "4 0 -15">
             <a-animation attribute="rotation" begin="click" dur="2000" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "2000" to ="0 0 0"></a-animation>
         </a-box>
-        <a-box  color="tomato" depth="4" height="4" width="4" position = "12 0 -15">
+        <a-box id = "eight" color="tomato" depth="4" height="4" width="4" position = "12 0 -15">
             <a-animation attribute="rotation" begin="click" dur="2000" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "2000" to ="0 0 0"></a-animation>
         </a-box>
         
-        <a-box  color="tomato" depth="4" height="4" width="4" position = "-12 -8 -15">
+        <a-box id = "nine" color="tomato" depth="4" height="4" width="4" position = "-12 -8 -15">
             <a-animation attribute="rotation" begin="click" dur="2000" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "2000" to ="0 0 0"></a-animation>
         </a-box>
-        <a-box  color="tomato" depth="4" height="4" width="4" position = "-4 -8 -15">
+        <a-box id = "ten" color="tomato" depth="4" height="4" width="4" position = "-4 -8 -15">
             <a-animation attribute="rotation" begin="click" dur="2000" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "2000" to ="0 0 0"></a-animation>
         </a-box>
-        <a-box  color="tomato" depth="4" height="4" width="4" position = "4 -8 -15">
+        <a-box  id = "eleven" color="tomato" depth="4" height="4" width="4" position = "4 -8 -15">
             <a-animation attribute="rotation" begin="click" dur="2000" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "2000" to ="0 0 0"></a-animation>
         </a-box>
-        <a-box  color="tomato" depth="4" height="4" width="4" position = "12 -8 -15">
+        <a-box id = "twelve" color="tomato" depth="4" height="4" width="4" position = "12 -8 -15">
             <a-animation attribute="rotation" begin="click" dur="2000" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "2000" to ="0 0 0"></a-animation>
         </a-box>
