--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/aframe-text-geometry-component@^0.5.0/dist/aframe-text-geometry-component.min.js"></script> 
 </head>
   <body>
-    <div class = "input">
+    <div id = "input">
     <input id = "userInput" type = "text">
     <button id = "button" onclick = "startGame()" type = "submit">Submit</button>
     </div>
