--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <a-scene visible = false id = "scene">
         <a-assets id = "assets">
             <a-entity gearvr-controls></a-entity>
-            <img id = "sky" src = "sky.png">
+            <!--<img id = "sky" src = "sky.png">-->
             <a-asset-item id="optimerBoldFont" src="https://rawgit.com/mrdoob/three.js/dev/examples/fonts/optimer_bold.typeface.json"></a-asset-item>
             <a-mixin id="boldFont" text="font: #optimerBoldFont"></a-mixin>
         </a-assets>
         <a-entity id = "win" visible = "false" position = "-2.5 2 -5" scale = "2" text-geometry="value: You won!; font: #optimerBoldFont"></a-entity>
+         <a-entity id = "lose" visible = "false" position = "-2.5 2 -5" scale = "2" text-geometry="value: You Lost....; font: #optimerBoldFont"></a-entity>
+        <a-text id="time" position="-0.2 1.85 -2" scale="1.5 1.5 1.5" value="60" color="red"></a-text>
         <a-box color = "tomato" id = "one" depth="4" height="4" width="4" position = "-12 8 -20">
             <a-animation attribute="rotation" begin="click" dur="500" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "500" to ="0 0 0"></a-animation>
@@ -70,7 +72,7 @@
             <a-animation attribute="rotation" begin="click" dur="500" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "500" to ="0 0 0"></a-animation>
         </a-box>
-    <a-sky src = "#sky"></a-sky>
+    <a-sky src = ""></a-sky>
     <a-camera>
         <a-cursor> </a-cursor>
     </a-camera>
