--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
     <div id = "input">
     <input id = "userInput" type = "text">
     <button id = "button" onclick = "startGame()" type = "submit">Submit</button>
+    <p>Testing your memory is so much more fun when you're seeing what you want to see... input what theme you want your memory game to be!</p>
     </div>
     <a-scene visible = false id = "scene">
         <a-assets id = "assets">
             <a-entity gearvr-controls></a-entity>
-            <!--<img id = "sky" src = "sky.png">-->
+            <img id = "sky" src = "sky.png">
             <a-asset-item id="optimerBoldFont" src="https://rawgit.com/mrdoob/three.js/dev/examples/fonts/optimer_bold.typeface.json"></a-asset-item>
             <a-mixin id="boldFont" text="font: #optimerBoldFont"></a-mixin>
         </a-assets>
-        <a-entity id = "win" visible = "false" position = "-2.5 2 -5" scale = "2" text-geometry="value: You won!; font: #optimerBoldFont"></a-entity>
-         <a-entity id = "lose" visible = "false" position = "-2.5 2 -5" scale = "2" text-geometry="value: You Lost....; font: #optimerBoldFont"></a-entity>
-        <a-text id="time" position="-0.2 1.85 -2" scale="1.5 1.5 1.5" value="60" color="red"></a-text>
+        <a-entity id = "win" visible = "false" position = "-3 2 -5" scale = "2" text-geometry="value: You won!; font: #optimerBoldFont"></a-entity>
+         <a-entity id = "lose" visible = "false" position = "-3 2 -5" scale = "2" text-geometry="value: You Lost....; font: #optimerBoldFont"></a-entity>
+        <a-text id="time" position="-0.2 1.85 -2" scale="1.5 1.5 1.5" value="5" color="red"></a-text>
         <a-box color = "tomato" id = "one" depth="4" height="4" width="4" position = "-12 8 -20">
             <a-animation attribute="rotation" begin="click" dur="500" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "500" to ="0 0 0"></a-animation>
@@ -72,9 +73,21 @@
             <a-animation attribute="rotation" begin="click" dur="500" to="0 360 0"></a-animation>
             <a-animation attribute ="rotation" begin = "return" dur = "500" to ="0 0 0"></a-animation>
         </a-box>
-    <a-sky src = ""></a-sky>
-    <a-camera>
-        <a-cursor> </a-cursor>
+        <a-entity id = "gameOver" visible = "false">
+        <a-entity id = "playAgainText" visible = "true" position = "-13 2.3 -3" scale = "2" text-geometry="value: Play again!; font: #optimerBoldFont"></a-entity>
+        <a-sphere id = "playAgain" color = "dodgerblue" onclick = "reset()" radius = "1" position = "-11 .5 -4">
+            <a-animation attribute = "position" dur = "2000" to = "-11 1.3 -4" from = "-11 .7 -4" direction = "alternate" repeat = "indefinite"></a-animation>
+        </a-sphere>
+        <a-entity id = "newTopicText" visible = "true" position = "6 2.2 -3" scale = "2" text-geometry="value: Back to home. ; font: #optimerBoldFont"></a-entity>
+        <a-sphere id = "newTopic" onclick = "goHome()" color = "purple" radius = "1" position = "10.3 .5 -4">
+            <a-animation attribute = "position" dur = "2000" to = "10.3 1.3 -4" from = "10.3 .7 -4" direction = "alternate" repeat = "indefinite"></a-animation>
+        </a-sphere>
+        </a-entity>
+    <a-sky color = "black"></a-sky>
+    <a-camera id = "cam">
+        <a-cursor color = "white"> </a-cursor>
+        <a-animation attribute = "position" to = "0 0 8" dur = "3000" begin = "end"></a-animation>
+        <a-animation attribute = "position" to = "0 0 0" dur = "3000" begin = "startOver"></a-animation>
     </a-camera>
     </a-scene>
     <script src = "script.js"></script>
