--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <script src="https://unpkg.com/aframe-text-geometry-component@^0.5.0/dist/aframe-text-geometry-component.min.js"></script> 
 </head>
   <body>
-    <div id = "input">
-    <input id = "userInput" type = "text">
-    <button id = "button" onclick = "startGame()" type = "submit">Submit</button>
-    <p>Testing your memory is so much more fun when you're seeing what you want to see... input what theme you want your memory game to be!</p>
-    </div>
-    <a-scene visible = false id = "scene">
+      <div id = "input">
+            <input id = "userInput" type = "text">
+            <button id = "button" onclick = "startGame()" type = "submit">Submit</button>
+    <!--<p>Testing your memory is so much more fun when you're seeing what you want to see... input what theme you want your memory game to be!</p>-->
+        </div>
+    <a-scene visible = true id = "scene">
+        
         <a-assets id = "assets">
             <a-entity gearvr-controls></a-entity>
             <img id = "sky" src = "sky.png">
@@ -78,7 +79,7 @@
         <a-sphere id = "playAgain" color = "dodgerblue" onclick = "reset()" radius = "1" position = "-11 .5 -4">
             <a-animation attribute = "position" dur = "2000" to = "-11 1.3 -4" from = "-11 .7 -4" direction = "alternate" repeat = "indefinite"></a-animation>
         </a-sphere>
-        <a-entity id = "newTopicText" visible = "true" position = "6 2.2 -3" scale = "2" text-geometry="value: Back to home. ; font: #optimerBoldFont"></a-entity>
+        <a-entity id = "newTopicText" visible = "true" position = "6 2.2 -3" scale = "2" text-geometry="value: New topic! ; font: #optimerBoldFont"></a-entity>
         <a-sphere id = "newTopic" onclick = "goHome()" color = "purple" radius = "1" position = "10.3 .5 -4">
             <a-animation attribute = "position" dur = "2000" to = "10.3 1.3 -4" from = "10.3 .7 -4" direction = "alternate" repeat = "indefinite"></a-animation>
         </a-sphere>
